Bug 1113582 - ServiceWorker parse errors are now properly handled during the Update phase. r=baku,bz

Folded:
Enable network error detection test. Fix scopes for network test and parse...

... test to deal with https://github.com/slightlyoff/ServiceWorker/issues/547

--HG--
extra : rebase_source : bbe594b231f1ea878fba78f6594483d6dbd72424